# minimal-renderer

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
minimal-renderer/: CMakeLists.txt  imgui.ini  minimal-renderer.sln  minimal-renderer.vcxproj  minimal-renderer.vcxproj.filters
minimal-renderer/libraries/include/assimp/: revision.h
minimal-renderer/libraries/include/glad/: glad.h
minimal-renderer/libraries/lib/: glfw3.lib
minimal-renderer/resources/models/: box.fbx  plane.fbx  sphere.fbx
minimal-renderer/resources/shaders/: default.frag  default.vert  triangle.frag  triangle.vert
minimal-renderer/resources/shaders/00_GettingStarted/: texture_loading.vert  transform.vert
minimal-renderer/resources/shaders/01_Lighting/00_PhongLighting/: object.frag  object.vert
minimal-renderer/resources/shaders/01_Lighting/01_Materials/: light.frag  light.vert  object.frag  object.vert
minimal-renderer/resources/shaders/01_Lighting/03_LightCasters/: light.vert  object.frag  object.vert
minimal-renderer/resources/shaders/01_Lighting/04_MultipleLights/: object.frag
minimal-renderer/resources/shaders/02_LoadingMesh/: object.frag
minimal-renderer/resources/shaders/03_AdvancedOpenGL/01_DepthTesting/: depth_test.frag
minimal-renderer/resources/shaders/03_AdvancedOpenGL/02_StencilTesting/: object.frag  stencil_test.frag  stencil_test.vert
minimal-renderer/resources/shaders/03_AdvancedOpenGL/03_Blending/: grass.frag  window.frag
minimal-renderer/resources/shaders/03_AdvancedOpenGL/04_Framebuffer/: blur.frag  edge_detect.frag  framebuffer.frag  framebuffer.vert  grayscale.frag  negative.frag  sharpen.frag
minimal-renderer/resources/shaders/03_AdvancedOpenGL/05_Cubemap/: cubemap.frag  cubemap.vert  reflection.frag  reflection.vert  refraction.frag
minimal-renderer/resources/shaders/03_AdvancedOpenGL/06_Advanced_GLSL/: interface_block.frag  interface_block.vert  uniform_buffer_obj.vert
minimal-renderer/resources/shaders/GettingStarted/: default.vert
minimal-renderer/resources/shaders/Lighting/: light.frag  light.vert  object.frag  object.vert
minimal-renderer/resources/shaders/Lighting/Materials/: light.vert  object.frag
minimal-renderer/resources/shaders/Lighting/PhongLighting/: object.frag
minimal-renderer/resources/shaders/Lighting/SurfaceMaps/: object.frag  object.vert
minimal-renderer/resources/shaders/common/: light.frag  light.vert
minimal-renderer/src/: AppState.cpp  AppState.h  Application.cpp  Camera.cpp  Camera.h  EditorUI.cpp  EditorUI.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderBuffer.cpp  RenderBuffer.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.h  SceneRegistry.cpp  SceneRegistry.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  (+20 more)
minimal-renderer/src/scenes/: 00_SceneClearColor.cpp  00_SceneClearColor.h  01_SceneCube.cpp  01_SceneCube.h  01_SceneHelloTriagle.cpp  01_SceneHelloTriagle.h  01_SceneHelloTriangle.cpp  01_SceneHelloTriangle.h  02_SceneCubeMultiple.cpp  02_SceneCubeMultiple.h  02_SceneHelloTriagleIndexed.cpp  02_SceneHelloTriagleIndexed.h  02_SceneHelloTriangleIndexed.cpp  02_SceneHelloTriangleIndexed.h  03_ScenePhongLight.cpp  03_ScenePhongLight.h  03_SceneTextures.cpp  03_SceneTextures.h  04_SceneMaterials.cpp  04_SceneMaterials.h  04_SceneTransformation.cpp  04_SceneTransformation.h  05_SceneCoordinateSystem.cpp  05_SceneCoordinateSystem.h  05_SceneSurfMaps.cpp  05_SceneSurfMaps.h  06_SceneCube.cpp  06_SceneCube.h  06_SceneLightCasters.cpp  06_SceneLightCasters.h  07_SceneCubeMultiple.cpp  07_SceneCubeMultiple.h  07_SceneMultipleLights.cpp  07_SceneMultipleLights.h  08_SceneModelLoading.cpp  08_ScenePhongLight.cpp  08_ScenePhongLight.h  09_SceneDepthTesting.cpp  09_SceneDepthTesting.h  09_SceneMaterials.cpp  (+47 more)
shaders/: triangle.frag  triangle.vert
src/: glad.c  main.cpp
